[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/EarthBenderBearded.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Sprites/Environment/light.png" type="Texture" id=3]
[ext_resource path="res://sounds/fst_grass_walk_01.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/Environment/ShadowForAll.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 9.5 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 190, 97 )
z_index = 2
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "down_idle"
playing = true

[node name="Shadow" type="Sprite" parent="Sprite"]
position = Vector2( -1, -1 )
z_index = 1
z_as_relative = false
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 19.5 )
shape = SubResource( 1 )

[node name="BackupLight" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 3 )
texture_scale = 0.5
color = Color( 0.752941, 0.729412, 0.654902, 1 )
energy = 0.65

[node name="Footsteps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -28.0
pitch_scale = 1.23
max_distance = 200.0

[node name="Timer" type="Timer" parent="Footsteps"]
wait_time = 0.45
autostart = true

[node name="Running" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -28.0
pitch_scale = 1.23
max_distance = 200.0

[node name="RunningTimer" type="Timer" parent="Running"]
wait_time = 0.35
autostart = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Footsteps/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Running/RunningTimer" to="." method="_on_RunningTimer_timeout"]
